--- a/config.json
+++ b/config.json
@@ -1,10 +1,14 @@
 {
   "mazes": [
     {
-      "name": "maze",
-      "type": "zeta",
+      "name": "rb",
+      "type": "weaveOrthogonal",
       "count": 1,
-      "size": 10,
+      "size": {
+        "width": 20,
+        "height": 20,
+        "maxWeave": 5
+      },
       "algorithm": "rb",
       "openings": [["S", "S"], ["E", "E"]],
       "solve": true
@@ -17,12 +21,12 @@
     "svgPrecision": 2
   },
   "style": {
-    "cellSize": 20,
+    "cellSize": 30,
     "backgroundColor": "#00FFFFFF",
     "color": "#000000",
-    "strokeWidth": 2,
+    "strokeWidth": 3,
     "solutionColor": "#0000FF",
-    "solutionStrokeWidth": 2,
+    "solutionStrokeWidth": 3,
     "antialiasing": true
   }
 }
