Color map for theta maze and SVG canvas rewrite
- Added optimization levels to SVG output (only levels 0-1 are working for now!)
- Fixed distance map auto range (1 cell bigger than needed)
- Fixed orthogonal mazes distance map rect drawing

--- a/config.json
+++ b/config.json
@@ -1,20 +1,18 @@
 {
   "mazes": [
     {
-      "name": "test",
-      "type": "sigma",
+      "name": "test2_op0",
+      "type": "orthogonal",
       "size": 10,
-      "algorithm": "pr",
-      "openings": [["S", "S"], ["E", "E"]],
+      "algorithm": "rb",
       "distanceMap": true,
-      "distanceMapStart": ["S", "S"],
-      "solve": true,
-      "separateExport": true
+      "distanceMapStart": ["S", "S"]
     }
   ],
   "output": {
-    "format": "png",
-    "path": "testMazes/"
+    "format": "svg",
+    "path": "testMazes/",
+    "svgOptimization": 0
   },
   "style": {
     "distanceMapRange": "auto"
